<resources>
    <string name="app_name">VA Contrôle Poids</string>
    <string name="titre_choix_produit_1">Saisir ou scanner</string>
    <string name="titre_choix_produit_2">les 13 chiffres du code barre</string>
    <string name="saisir_le_code_barre">Saisir le code barre</string>
    <string name="ajouter_article">Ajouter article</string>
    <string name="valider">Valider</string>
    <string name="nom_article">Nom de l\'article</string>
    <string name="poids_net">Poids net</string>
    <string name="poids_brut">Poids brut</string>
    <string name="rendement">Rendement</string>
    <string name="code_operateur">Saisir le code opérateur</string>
    <string name="code_operateur_titre">Code opérateur</string>
    <string name="nombre_venues">Saisir le nombre de venues</string>
    <string name="venues_titre">Venues fabriquées</string>
    <string name="ddm_titre">DDM</string>
    <string name="saisir_la_ddm">JJ/MM/AA</string>
    <string name="numero_de_lot">Numéro de lot</string>
    <string name="annuler">Annuler</string>
    <string name="numero_lot">Saisir le numéro de lot</string>
    <string name="code_article">Code article</string>
    <string name="date_du_jour">Date du jour :</string>
    <string name="poids_cible">Poids cible</string>
    <string name="saisir_le_poids_brut">Saisir le poids brut</string>
    <string name="ecart_type">Ecart-type</string>
    <string name="moyenne">Moyenne</string>
    <string name="variance">Variance</string>
    <string name="continuer">Continuer</string>
    <string name="ajouter_un_article">Ajouter un article</string>
    <string name="saisir_code_article">Saisir le code de l\'article</string>
    <string name="ean_article">EAN de l\'article</string>
    <string name="saisir_ean_article">Saisir l\'EAN de l\'article</string>
    <string name="saisir_nom_article">Saisir le nom de l\'article</string>
    <string name="saisir_poids_net">Saisir le poids net de l\'article</string>
    <string name="saisir_rendement">Saisir le rendement</string>
    <string name="terminer">Terminer</string>
    <string name="ticket_pdf">Ticket PDF</string>
    <string name="ajouter_modifier">Ajouter modifier</string>
</resources>